--- a/bmr_docs_vars_bvarm.html
+++ b/bmr_docs_vars_bvarm.html
@@ -84,6 +84,7 @@ pre {
 <br>
 
 <div class="row">
+    <div class="col-md-2"></div>
     <div class="col-md-5">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -99,6 +100,14 @@ pre {
         </div>
     </div>
 </div>
+
+<!--  -->
+
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+
+<p>BVAR with Minnesota prior.</p>
 
 <hr style="height:2px;border-width:0;background-color:black">
 
@@ -195,22 +204,38 @@ bvar_obj$gibbs(n_draws)
 
 <br>
 
+<p>The model:</p>
+$$
+y_t = \beta_0 + y_{t-1} \beta_1 + \cdots y_{t-p} \beta_p + e_t, \ \ e_t \stackrel{\text{iid}}{\sim} \mathcal{N} \left( \mathbf{0}, \Sigma \right)
+$$
+<p>where $y_t$ is a $1 \times M$ vector. We write this in stacked form as:</p>
 $$
 Y = X \beta + e
 $$
 
-<p>The Minnesota prior (also known as Litterman's prior) holds fixed the covariance matrix of disturbance terms, $\Sigma$, during posterior sampling. 
-This simplification yields a significant decrease in computational expenditure. The standard references for this type of model are Doan, Litterman, and Sims (1983) and Litterman (1986).</p>
+<p>The Minnesota prior (also known as Litterman's prior) holds $\Sigma$ fixed to a data-based estimate for posterior sampling of $\beta$, a simplification that yields significant computational speedups compared with the independent Normal-inverse-Wishart model. For references, see Doan, Litterman, and Sims (1983) and Litterman (1986).</p>
 
-<p>The Minnesota prior sets $\Sigma$ to be a diagonal matrix, where the diagonal elements come from equation-by-equation estimation of an AR($p$) model for each variable in the VAR system. 
-    That is, for each variable in the VAR model, we estimate the model assuming that all coefficients, except their own-lag terms (and a possible constant term), are equal to zero.<p>
+<hr>
+
+<p>With the Minnesota prior, $\Sigma$ is a diagonal matrix whose elements are derived from equation-by-equation estimation of AR($p$) models, one for each variable in the VAR system. 
+    That is, for each variable in the VAR model, we estimate the model imposing that all coefficients, except own-lag terms (and a possible constant), are equal to zero. Then:<p>
 $$
-	\Sigma = \begin{bmatrix} \sigma_{1}^2 &0 & 0 & \cdots & 0 \\ 0& \sigma_2^2 & 0 & \cdots & 0  \\ 0& 0 & \sigma_3^2 &  \cdots & 0  \\ \vdots & \vdots & \ddots &  \ddots &  \\ 0& 0 & 0 &  0 & \sigma_m^2  \end{bmatrix}
+	\Sigma = \begin{bmatrix} \sigma_{1}^2 &0 & 0 & \cdots & 0 \\ 0& \sigma_2^2 & 0 & \cdots & 0  \\ 0& 0 & \sigma_3^2 & \ddots & 0  \\ \vdots & \vdots & \ddots &  \ddots & \vdots \\ 0& 0 & 0 &  0 & \sigma_M^2  \end{bmatrix}
 $$
 
-<p>Construction of the prior variance matrix for $\beta$ is set in one of two ways. Let $i, j \in \{ 1,\ldots, m\}$; we index the equation by $i$, and the variable by $j$. We denote lags by $\ell \in \{1, \ldots, p\}$</p>
+<br>
+
+<p>The prior for $\alpha = \text{vec}(\beta)$ is:</p>
+$$
+p(\alpha) = \mathcal{N}(\bar{\alpha},\Xi_\alpha)
+$$
+<p>The prior mean of the coefficients, $\bar{\alpha}$, is a $K M \times 1$ vector of zeros, except for elements that relate to the fist-order own-lags terms. The latter values are set by <code>coef_prior</code> the prior function.</p>
+
+
+<p>Construction of the prior variance matrix for $\beta$ is set in one of two ways.</p>
 <ul>
-    <li><code>var_type=1</code> Koop and Korobilis (2010) define the prior covariance matrix of $\beta$ as follows:
+    <li>Let $i, j \in \{ 1,\ldots, m\}$. Equations are indexed by $i$, and variables by $j$. We denote lags by $\ell \in \{1, \ldots, p\}$.</li>
+    <li><code>var_type=1</code> Koop and Korobilis (2010) version of the prior covariance matrix for $\beta$:
 \begin{equation*}
 \Xi_{\beta_{i,j}} (\ell) =
 	\begin{cases}
@@ -220,7 +245,7 @@ $$
 	\end{cases}
 \end{equation*}
 which correspond to own lags, cross-variable lags, and exogenous variables (e.g., a constant), respectively.</li>
-    <li><code>var_type=2</code> Canova (2007) defines a more general form for the decay:
+    <li><code>var_type=2</code> Canova (2007) uses a general form for the decay:
 \begin{equation*}
 \Xi_{\beta_{i,j}} (\ell) =
 	\begin{cases}
@@ -229,13 +254,13 @@ which correspond to own lags, cross-variable lags, and exogenous variables (e.g.
 			& H_1 \cdot H_3
 	\end{cases}
 \end{equation*}
-which, again, correspond to own lags, cross-variable lags, and exogenous variables, respectively. $d(\ell)$ is the `decay' function.
+which, again, correspond to own lags, cross-variable lags, and exogenous variables, respectively. $d(\ell)$ is the <em>decay</em> function.
 
 <br><br>
 
-In the Koop and Korobilis (2010) case, $d(\ell) = \ell^2$. Also, note that, for cross-equation coefficients, the ratio of the variance of each equation has been inverted. 
+In the Koop and Korobilis (2010) case, $d(\ell) = \ell^2$. Note also that, for cross-equation coefficients, the ratio of the variance of each equation has been inverted. 
 <br><br>
-The user can choose between two functional forms for $d(\ell)$, both index by hyperparameter $H_4 > 0$: 
+The user can choose between two functional forms for $d(\ell)$, both index by a hyperparameter $H_4 > 0$: 
     <ul>
         <li><code>decay_type=1</code> harmonic decay, where $d (\ell) = \ell^{H_4}$;</li>
         <li><code>decay_type=2</code> geometric decay, where $d (\ell) = H_4^{-\ell + 1}$.</li>
@@ -243,7 +268,7 @@ The user can choose between two functional forms for $d(\ell)$, both index by hy
     When $H_4 = 1$, we have linear decay.
 </ul>
 
-<p>$\Xi_{\beta}$ is then vectorised, and this becomes the main diagonal to a new matrix of size $\left( (\mathbf{1}_c + q + m \cdot p) \times m \right) \times \left( (\mathbf{1}_c + q + m \cdot p) \times m \right)$, where all off-diagonal entries are set to zero.</p>
+<p>$\Xi_{\beta}$ is then vectorised and becomes the main diagonal of $\Xi_\alpha$, with all off-diagonal elemnts of $\Xi_\alpha$ set to zero.</p>
 
 <p>With $\Sigma$ fixed, the posterior distribution of $\alpha = \text{vec}(\beta)$ is given by
 \begin{equation}
@@ -288,6 +313,8 @@ plot(bvar_obj,var_names=colnames(USMacroData),save=FALSE)
 forecast(bvar_obj,shocks=TRUE,var_names=colnames(USMacroData),back_data=10,save=FALSE)
 </pre>
 
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
