--- a/bmr_header.html
+++ b/bmr_header.html
@@ -20,6 +20,8 @@
                 <ul class="dropdown-menu">
                     <li><a href="bmr_docs_vars_bvarm.html">bvarm</a></li>
                     <li><a href="bmr_docs_vars_bvars.html">bvars</a></li>
+                    <li class="divider"></li>
+                    <li><a href="bmr_docs_vars_bvarcnw.html">bvarcnw</a></li>
                     <li><a href="bmr_docs_vars_bvarinw.html">bvarinw</a></li>
                     <li class="divider"></li>
                     <li><a href="bmr_docs_vars_cvar.html">cvar</a></li>
